[package]
name = "roblox_api"
version = "0.1.0"
edition = "2024"
description = "Library for roblox apis"

[dependencies]
reqwest = { version = "0", features = [
	"gzip",
	"brotli",
	"deflate",
	"json",
	"socks",
	"cookies",
] }
deranged = { version = "0", features = ["serde"] }
thiserror = "2"
itertools = "0"
tracing = "0"
async-trait = "0"
serde = { version = "1", features = ["derive"] }
bytes = "1"
ahash = "0"
chrono = { version = "0", features = ["serde"] }
serde_repr = "0"
derive_is_enum_variant = "0"
futures = "0"
async-stream = "0"
uuid = { version = "1", features = ["v4", "serde"] }
serde_iter = "0"
arc-swap = "1"
dashmap = { version = "6", features = ["inline"] }
sonic-rs = "0"
